# Email-RAG-Agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
Frontend/: index.html  package-lock.json  package.json  vite.config.js
Frontend/src/: App.jsx  config.js  index.css  main.jsx
Frontend/src/components/: ErrorBoundary.jsx  Loading.jsx  sidebar.tsx
Frontend/src/pages/: Analytics.jsx  Dashboard.jsx  Escalations.jsx  History.jsx  Logs.jsx  Settings.jsx  Sidebar.jsx
Frontend/src/theme/: ThemeProvider.jsx
Frontend/src/ui/: button.jsx  card.jsx  switch.jsx
app/: auth_gmail.py  main.py
app/agent/: agent_graph.py  agent_reply.py  validation_utils.py
app/api/: routes_app.py  routes_email.py  routes_llm.py  routes_rag.py
app/config/: __init__.py  settings.py
app/gmail/: auth_gmail.py  gmail_utils.py
app/models/: __init__.py  embeddings.py  llm_model.py
app/rag/: rag_pipeline.py
app/services/: email_service.py  metrics.py  persistence.py
data/: sqlite.db3
data/embeddings/faiss_index/: index.faiss  index.pkl
runs/: test-1.state.json
tests/: test.py  test_agent_graph.py  test_agent_graph_escalation.py  test_agent_reply.py  test_config_and_services.py  test_gmail_utils.py  test_llm_model.py  test_rag_pipeline.py  test_validation_utils.py
tests/integration/: test_agent_graph.py  test_agent_graph_escalation.py  test_langgraph_runner.py  test_rag_pipeline.py
tests/unit/: test_agent_reply.py  test_config_and_services.py  test_gmail_utils.py  test_llm_model.py  test_validation_utils.py
(+3 files in other folders)
