[project]
name = "email-rag-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.12.0",
    "google-api-python-client>=2.179.0",
    "google-auth>=2.40.3",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "groq>=0.31.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.28",
    "langchain-huggingface>=0.3.1",
    "sentence-transformers>=5.1.0",
]
